28 Dec 2018:  Fixed keybinding bug on Internal CAD modals
27 Dec 2018:  Fixed glitchy window bug
27 Dec 2018:  Added Changelog
27 Dec 2018:  Moved Merge Geometry form entry higher up on form
27 Dec 2018:  Fixed delete/backspace behavior on cam modal
27 Dec 2018:  Fixed transform hover-artifacts
27 Dec 2018:  Fixed MacOS Delete keybinding
20 Dec 2018:  Don't show Merge Geometry option on Raster Fill operations, invalid use case
10 Dec 2018:  Fixed bug with Laser Fill Gcode
05 Dec 2018:  New consolidated File menu for workspace, save, open, etc
03 Dec 2018:  New HelloWorld workspace as per demo video
28 Nov 2018:  Fixed Option/Ctrl keybinding for MacOS
26 Nov 2018:  Renamed references to host software as OpenBuilds CONTROL
26 Nov 2018:  Fix for handling empty operations
21 Nov 2018:  Update Leadmachine CAM profile
30 Oct 2018:  Update UI to have rows/columns resizable - Metro Splitter
30 Oct 2018:  Implemented sidebar menu to switch between tools (Select, Move, Transform, Delete)
30 Oct 2018:  Improved error handling for unsupported DXF Entities
08 Oct 2018:  Fixed Firefox specific bugs: Mouse Hover, FileOpen and Built-in CAD events
08 Oct 2018:  Fixed hover-select bug
08 Oct 2018:  Fixed Rasterfill Z height bug
05 Oct 2018:  Add option to specify number of segments per circle in built-in CAD
03 Oct 2018:  Updated Readme
27 Sep 2018:  Fixed document-tree bug
24 Sep 2018:  Revamped the Toolpaths menu
24 Sep 2018:  Moved SIM button
24 Sep 2018:  Fixed select-multiple bug
24 Sep 2018:  Improved Document tree to allow selection of Layers
21 Sep 2018:  Improved Document tree to allow checkbox selection
21 Sep 2018:  Fixed bug in circular-array-rotation geometry optimiser
20 Sep 2018:  Implemented hover-mesh functionality to highlight what is being hovered over more clearly
20 Sep 2018:  Added CenterDrill Operation
19 Sep 2018:  Added scrollbar to Cam Modal
19 Sep 2018:  Added Excellon Drill File support
19 Sep 2018:  Added Gerber x274 File support