@@ -507,31 +507,31 @@
 					<div class="row">
 						<label class="cell-sm-4">toothCount<br><small>(Number of teeth per gear)</small></label>
 						<div class="cell-sm-4 pt-2">
-							<input id="toothCount1" data-role="input" type="number" value="45" data-append="x" data-clear-button="false" step="0.001">
+							<input id="toothCount1" data-role="input" type="number" value="45" data-append="x" data-clear-button="false" step="any">
 						</div>
 						<div class="cell-sm-4 pt-2">
-							<input id="toothCount2" data-role="input" type="number" value="50" data-append="x" data-clear-button="false" step="0.001">
+							<input id="toothCount2" data-role="input" type="number" value="50" data-append="x" data-clear-button="false" step="any">
 						</div>
 					</div>
 					<div class="row border-bottom bd-gray">
 						<label class="cell-sm-4">centerHoleDiameter<br><small>(0 for no hole)</small></label>
 						<div class="cell-sm-4 pt-2">
-							<input id="centerHoleDiameter1" data-role="input" type="number" value="20" data-append="mm" data-clear-button="false" min="0" max="200"  step="0.001">
+							<input id="centerHoleDiameter1" data-role="input" type="number" value="20" data-append="mm" data-clear-button="false" min="0" max="200"  step="any">
 						</div>
 						<div class="cell-sm-4 pt-2">
-							<input id="centerHoleDiameter2" data-role="input" type="number" value="20" data-append="mm" data-clear-button="false" min="0" max="200"  step="0.001">
+							<input id="centerHoleDiameter2" data-role="input" type="number" value="20" data-append="mm" data-clear-button="false" min="0" max="200"  step="any">
 						</div>
 					</div>
 					<div class="row border-bottom bd-gray">
 						<label class="cell-sm-8">circularPitch<br><small>(the circumference of the pitch circle divided by the number of teeth)</small></label>
 						<div class="cell-sm-4 pt-2">
-							<input id="circularPitch" data-role="input" type="number" value="8" data-clear-button="false" step="0.001">
+							<input id="circularPitch" data-role="input" type="number" value="8" data-clear-button="false" step="any">
 						</div>
 					</div>
 					<div class="row border-bottom bd-gray">
 						<label class="cell-sm-8">pressureAngle<br><small>(common values are 14.5, 20 and 25 degrees)</small></label>
 						<div class="cell-sm-4 pt-2">
-							<input id="pressureAngle" data-role="input" type="number" value="20" data-append="deg" data-clear-button="false" step="0.001">
+							<input id="pressureAngle" data-role="input" type="number" value="20" data-append="deg" data-clear-button="false" step="any">
 						</div>
 					</div>
 					<div>
@@ -541,19 +541,19 @@
 						<div class="row border-bottom bd-gray">
 							<label class="cell-sm-8">profileShift<br><small>(indicates what portion of gear one's addendum height should be shifted to gear two. E.g., a value of 0.1 means the adddendum of gear two is increased by a factor of 1.1 while the height of the addendum of gear one is reduced to 0.9 of its normal height.)</small></label>
 							<div class="cell-sm-4 pt-2">
-								<input id="profileShift" data-role="input" type="number" value="0" data-clear-button="false" step="0.001">
+								<input id="profileShift" data-role="input" type="number" value="0" data-clear-button="false" step="any">
 							</div>
 						</div>
 						<div class="row border-bottom bd-gray">
 							<label class="cell-sm-8">resolution<br><small>Number of segments per 360 degree of rotation (only used for circles and arcs); 90 is plenty</small></label>
 							<div class="cell-sm-4 pt-2">
-								<input id="resolution" data-role="input" type="number" value="30" data-clear-button="false" step="0.001">
+								<input id="resolution" data-role="input" type="number" value="30" data-clear-button="false" step="any">
 							</div>
 						</div>
 						<div class="row border-bottom bd-gray">
 							<label class="cell-sm-8">stepsPerToothAngle<br><small>Rotation steps per tooth angle when assembling the tooth profile (3 = draft, 10 = good quality). Increasing the value will result in smoother profiles at the cost of significantly higher calcucation time. Increase in small increments and check the result by zooming in.</small></label>
 							<div class="cell-sm-4 pt-2">
-								<input id="stepsPerToothAngle" data-role="input" type="number" value="3" data-clear-button="false" step="0.001">
+								<input id="stepsPerToothAngle" data-role="input" type="number" value="3" data-clear-button="false" step="any">
 							</div>
 						</div>
 					</div>
